# ApexDeploy

./: .env.example  .gitignore  Dockerfile  Dockerfile.dashboard  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
dashboard/: __init__.py  app.py
dashboard/components/: __init__.py  metrics_card.py  sidebar.py  status_badge.py
dashboard/pages/: 01_Overview.py  02_Repositories.py  03_Pipeline.py  04_Agents.py  05_Docker.py  06_Monitoring.py  07_Security.py  08_Reports.py  09_Logs.py  10_Settings.py
docs/: agents.md  architecture.md  installation.md
docs/diagrams/: agent_communication.md  database_erd.md  pipeline_flow.md  system_architecture.md
src/: __init__.py  main.py
src/agents/: __init__.py  code_review_agent.py  deployment_agent.py  docker_agent.py  git_agent.py  monitoring_agent.py  rollback_agent.py  security_agent.py  testing_agent.py
src/api/: __init__.py  router.py
src/config/: __init__.py  logging_config.py  settings.py
src/core/: __init__.py  agent_registry.py  base_agent.py  dependencies.py  exceptions.py  orchestrator.py
src/db/: __init__.py  database.py  models.py  repositories.py  repository_base.py  stats.py
src/deployment/: __init__.py  aws_adapter.py  azure_adapter.py  base_adapter.py  cloud_run_adapter.py  docker_adapter.py  local_adapter.py  railway_adapter.py
src/docker/: __init__.py  docker_builder.py  docker_client.py  docker_health.py  docker_logs.py  docker_runner.py
src/events/: __init__.py  event_bus.py  event_types.py  handlers.py
src/llm/: __init__.py  gemini_client.py  prompts.py  response_parser.py  safety.py
src/mcp/: __init__.py  filesystem_mcp.py  git_mcp.py  github_mcp.py  terminal_mcp.py
src/memory/: __init__.py  deployment_history.py  pipeline_memory.py  session_memory.py
src/monitoring/: __init__.py  cpu_monitor.py  health_checker.py  log_monitor.py  memory_monitor.py  metrics.py
src/pipeline/: __init__.py  pipeline_context.py  pipeline_events.py  pipeline_runner.py  pipeline_state.py
src/plugins/: __init__.py  plugin_interface.py  plugin_loader.py
src/queue/: __init__.py  task_queue.py  worker.py
src/services/: __init__.py  notification_service.py  report_service.py  report_templates.py
src/state/: __init__.py  agent_state.py  deployment_state.py  workflow_state.py
src/telemetry/: __init__.py  metrics.py  performance.py  traces.py
src/utils/: __init__.py  file_utils.py  git_utils.py  (+2 more)
tests/: __init__.py  conftest.py
(+45 files in other folders)
