# =========================================================
# ApexDeploy - Project Configuration
# Autonomous Git-to-Cloud Resilience Engineer
# =========================================================

[project]
name = "apexdeploy"
version = "1.0.0"
description = "Autonomous Git-to-Cloud Resilience Engineer — AI-powered Multi-Agent DevOps Platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "ApexDeploy Team"},
]
keywords = [
    "ai-agents",
    "devops",
    "google-adk",
    "multi-agent",
    "mcp",
    "docker",
    "deployment",
    "monitoring",
    "rollback",
]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

# --- Ruff (Linter + Formatter) ---
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# --- Black (Formatter) ---
[tool.black]
target-version = ["py312"]
line-length = 100

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:artifacts/reports/coverage",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow-running tests",
    "docker: Tests requiring Docker",
]

# --- Coverage ---
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_empty = true
fail_under = 60

# --- Bandit (Security) ---
[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = ["B101"]  # Allow assert in non-test code for guards

# --- Pyright (Static Analysis) ---
[tool.pyright]
extraPaths = ["."]

